# EndSwitcher

./: .gitignore  LICENSE  README.md  build.ps1  pubspec.yaml
.github/workflows/: build.yml
integration_test/: simple_test.dart
lib/: main.dart  state.dart  theme.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: endfield.dart  webdav.dart
lib/ui/: components.dart  dashboard.dart  webdav.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: endfield.rs  mod.rs  webdav.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_endswitcher.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_endswitcher.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
